--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "ng-contextmenu",
-  "version": "0.9.0",
-  "homepage": "https://github.com/Wildhoney/ngContextMenu",
+  "version": "0.10.0",
+  "homepage": "https://github.com/fabyanmartin/ngContextMenu",
   "authors": [
-    "Adam Timberlake <adam.timberlake@gmail.com>"
+    "Adam Timberlake <adam.timberlake@gmail.com>",
+    "Fabyan Martin <fabyan.martin1@gmail.com"
   ],
   "description": "Handcraft your very own context menus for a richer UX!",
   "main": "dist/ng-contextmenu.js",
@@ -17,6 +18,7 @@
   ],
   "dependencies": {
     "angular": ">=1.3.0",
-    "angular-mocks": ">=1.3.0"
+    "angular-mocks": ">=1.3.0",
+    "express": "^4.14.0"
   }
 }
