--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-contextmenu",
+  "name": "ng-context-menu",
   "version": "0.10.0",
   "homepage": "https://github.com/fabyanmartin/ngContextMenu",
   "authors": [
