--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "urls": ["https://github.com/Wildhoney/ngContextMenu.git",
-      "https://github.com/fabyanmartin/ngContextMenu.git"]
+    "url": "https://github.com/fabyanmartin/ngContextMenu.git"
   },
   "authors": [
     "Adam Timberlake <adam.timberlake@gmail.com>",
@@ -20,7 +19,7 @@
   "license": "MIT",
   "bugs": {
     "urls": ["https://github.com/Wildhoney/ngContextMenu/issues",
-      "https://github.com/fabyanmartin/ngContextMenu"]
+      "https://github.com/fabyanmartin/ngContextMenu/issues"]
   },
   "homepage": ["https://github.com/Wildhoney/ngContextMenu",
     "https://github.com/fabyanmartin/ngContextMenu"],
