--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,10 @@
   "homepage": "https://github.com/fabyanmartin/ngContextMenu",
   "authors": [
     "Adam Timberlake <adam.timberlake@gmail.com>",
-    "Fabyan Martin <fabyan.martin1@gmail.com"
+    "Fabyan Martin <fabyan.martin1@gmail.com>"
   ],
   "description": "Handcraft your very own context menus for a richer UX!",
-  "main": "dist/ng-contextmenu.js",
+  "main": "dist/ng-context-menu-js.js",
   "license": "MIT",
   "ignore": [
     "**/.*",
