--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-context-menu-js",
-  "version": "0.11.2",
+  "version": "0.11.3",
   "homepage": "https://github.com/fabyanmartin/ngContextMenu",
   "authors": [
     "Adam Timberlake <adam.timberlake@gmail.com>",
@@ -18,7 +18,6 @@
   ],
   "dependencies": {
     "angular": ">=1.3.0",
-    "angular-mocks": ">=1.3.0",
-    "express": "^4.14.0"
+    "angular-mocks": ">=1.3.0"
   }
 }
